# fin_groups_ownership

./: .gitignore  pyproject.toml  run.ipynb
fin_groups/: __init__.py  crawler.py  db.py  main.py  normalize.py  parser.py
fin_groups/graph/: groups.py
fin_groups/tests/: test_parser.py
